<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Hello World, TaxiMobAndroidActivity!</string>
    <string name="app_name">Tawuseldroid</string>
    <string name="register_head">Register</string>
    <string name="register_firstname">First name</string>
    <string name="register_lastname">Last name</string>
    <string name="register_email">Email</string>
    <string name="register_mobilephone">Mobile phone</string>
    <string name="register_password">Password</string>
    <string name="register_repeatpassword">confirm password</string>
    <string name="register_button">Register now!</string>
    <string name="login_head">Login</string>
    <string name="login_loggedincheckbox">Keep me logged in</string>
    <string name="login_loginbutton">Login now!</string>
    <string name="login_registerbutton">Register first!</string>
    <string name="tours_head">Tours</string>
    <string name="tours_fromColumnHead">From</string>
    <string name="tours_toColumnHead">To</string>
    <string name="tours_timeColumnHead">Time</string>
    <string name="menu_newTour">Add tour</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_help">Help</string>
    <string name="menu_update">update data</string>
    <string name="tourDetailsDialog_head">Tour details</string>
    <string name="tourDetailsDialog_city">City:</string>
    <string name="tourDetailsDialog_from">From:</string>
    <string name="tourDetailsDialog_to">To:</string>
    <string name="tourDetailsDialog_time">Time:</string>
    <string name="tourDetailsDialog_status">Status:</string>
    <string name="tourDetailsDialog_passengers">Passengers:</string>
    <string name="tourDetailsDialog_joinbutton">join</string>
    <string name="tourDetailsDialog_leavebutton">leave</string>
    <string name="tourDetailsDialog_userJoined">You successfully joined the tour!</string>
    <string name="tourDetailsDialog_userNotJoined">You haven\'t joined the tour, an error occurred. Maybe the tour is closed already?</string>
    <string name="tourDetailsDialog_userLeft">You successfully left the tour!</string>
    <string name="tourDetailsDialog_userNotLeft">You haven\'t joined the tour, an error occurred.</string>
    <string name="createTourDialog_createbutton">create</string>
    <string name="createTourDialog_head">Create a new Tour</string>
    <string name="createTourDialog_date">Date:</string>
    <string name="createTourDialog_timeSeperator"> - </string>
    <string name="createTourDialog_createdTour">You successfully created a new tour!</string>
</resources>
