<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/login_table" 
    android:stretchColumns="1">

	<TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

		<TextView
		    android:id="@+id/login_tvRegister"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/login_head"
		    android:textAppearance="?android:attr/textAppearanceLarge" />    </TableRow>
    
    <View
        android:layout_height="2dip"
   		android:background="#FF909090" />
    
    <View 
        android:layout_height="15dip"
        android:background="#000000"/>
	
	

	<TableRow
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >

		<TextView
		    android:id="@+id/login_tvEmail"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:text="@string/register_email"
		    android:layout_weight="1"/>

		<EditText
		    android:id="@+id/login_etEmail"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:inputType="textEmailAddress"
		    android:layout_weight="1"/>
	</TableRow>

	<TableRow
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >

		<TextView
		    android:id="@+id/login_tvPassword"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:text="@string/register_password"
		    android:layout_weight="1"/>
		
		<EditText
		    android:id="@+id/login_etPassword"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:inputType="textPassword"
		    android:layout_weight="1"/>
	</TableRow>

	<CheckBox
	    android:id="@+id/login_cbKeepMeLoggedIn"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/login_loggedincheckbox" />
	<Button
	    android:id="@+id/login_bLogin"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/login_loginbutton" />
	
	<Button
	    android:id="@+id/login_bRegisterButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/login_registerbutton" />

</TableLayout>

