<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/register_table" 
    android:stretchColumns="1">

	<TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

		<TextView
		    android:id="@+id/register_tvRegister"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/register_head"
		    android:textAppearance="?android:attr/textAppearanceLarge" />    </TableRow>
    
    <View
        android:layout_height="2dip"
   		android:background="#FF909090" />
    
    <View 
        android:layout_height="15dip"
        android:background="#000000"/>
	
	
	<TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

		<TextView
		    android:id="@+id/register_tvFirstname"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:text="@string/register_firstname"
		    android:layout_weight="1"/>

		<EditText
		    android:id="@+id/register_etFirstname"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:inputType="textPersonName" 
		    android:layout_weight="1"/>
    </TableRow>

	<TableRow
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

		<TextView
		    android:id="@+id/register_tvLastname"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:text="@string/register_lastname"
		    android:layout_weight="1"/>

		<EditText
		    android:id="@+id/register_etLastname"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:inputType="textPersonName"
		    android:layout_weight="1"/>
	</TableRow>

	<TableRow
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >

		<TextView
		    android:id="@+id/register_tvEmail"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:text="@string/register_email"
		    android:layout_weight="1"/>

		<EditText
		    android:id="@+id/register_etEmail"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:inputType="textEmailAddress"
		    android:layout_weight="1"/>
	</TableRow>

	<TableRow
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >

		<TextView
		    android:id="@+id/register_tvMobilephone"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:text="@string/register_mobilephone"
		    android:layout_weight="1"/>

		<EditText
		    android:id="@+id/register_etMobilephone"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:inputType="phone"
		    android:layout_weight="1"/>
	</TableRow>

	<TableRow
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >

		<TextView
		    android:id="@+id/register_tvPassword"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:text="@string/register_password"
		    android:layout_weight="1"/>
		
		<EditText
		    android:id="@+id/register_etPassword"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:inputType="textPassword"
		    android:layout_weight="1"/>
	</TableRow>

	<TableRow
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >

		<TextView
		    android:id="@+id/register_tvRepeatpassword"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:text="@string/register_repeatpassword"
		    android:layout_weight="1"/>

		<EditText
		    android:id="@+id/register_etRepeatpassword"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:inputType="textPassword"
		    android:layout_weight="1"/>
	</TableRow>

	<Button
	    android:id="@+id/register_bRegister"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/register_button" />

</TableLayout>

