<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <TableLayout android:id="@+id/tourDetailsDialog_tlTable"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >
        
        <TableRow android:layout_width="fill_parent"
        	  android:layout_height="wrap_content">
    
        	<TextView android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF"
              	  android:text="@string/tourDetailsDialog_city" 
              	  android:layout_weight="1" />
        
        	<TextView android:id="@+id/tourDetailsDialog_tvCity"
            	  android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF" 
              	  android:layout_weight="1" />
    
    	</TableRow>
    
    	<TableRow android:layout_width="fill_parent"
        	  android:layout_height="wrap_content">
    
       	 	<TextView android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF"
              	  android:text="@string/tourDetailsDialog_from" 
              	  android:layout_weight="1" />
        
        	<TextView android:id="@+id/tourDetailsDialog_tvFrom"
            	  android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF"
              	  android:layout_weight="1" />
    
    	</TableRow>
    
    	<TableRow android:layout_width="fill_parent"
        	  android:layout_height="wrap_content">
    
        	<TextView android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF"
              	  android:text="@string/tourDetailsDialog_to"
              	  android:layout_weight="1" />
        
        	<TextView android:id="@+id/tourDetailsDialog_tvTo"
            	  android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF"
              	  android:layout_weight="1" />
    
   		</TableRow>
    
    	<TableRow android:layout_width="fill_parent"
        	  android:layout_height="wrap_content">
    
        	<TextView android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF"
              	  android:text="@string/tourDetailsDialog_time"
              	  android:layout_weight="1" />
        
        	<TextView android:id="@+id/tourDetailsDialog_tvTime"
            	  android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF"
                  android:layout_weight="1" />
    
    	</TableRow>
    
    	<TableRow android:layout_width="fill_parent"
        	  android:layout_height="wrap_content">
    
        	<TextView android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF"
              	  android:text="@string/tourDetailsDialog_status"
              	  android:layout_weight="1" />
        
        	<TextView android:id="@+id/tourDetailsDialog_tvStatus"
            	  android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF"
                  android:layout_weight="1" />
    
    	</TableRow>
    	
    	<TableRow android:layout_width="fill_parent"
        	  android:layout_height="wrap_content">
    
        	<TextView android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF"
              	  android:text="@string/tourDetailsDialog_passengers"
              	  android:layout_weight="1" />
        
        	<TextView android:id="@+id/tourDetailsDialog_tvPassengers"
            	  android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF"
                  android:layout_weight="1" />
    
    	</TableRow>
        
    </TableLayout>
    
    <View android:id="@+id/tourDetailsDialog_vFiller"
        android:layout_width="fill_parent"
        android:layout_height="15dip"
        android:background="#000000"
        android:layout_below="@id/tourDetailsDialog_tlTable" />
    
      <Button android:id="@+id/tourDetailsDialog_bLeaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tourDetailsDialog_vFiller"
        android:layout_alignParentRight="true"
        android:text="@string/tourDetailsDialog_leavebutton" />
    
   <Button android:id="@+id/tourDetailsDialog_bJoinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/tourDetailsDialog_bLeaveButton"
        android:layout_below="@id/tourDetailsDialog_vFiller"
        android:text="@string/tourDetailsDialog_joinbutton" />

</RelativeLayout>