<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TableLayout 
        android:id="@+id/tours_headTable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
		
        <TableRow
           android:id="@+id/tours_headRow1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" >
        
		<TextView
		    android:id="@+id/tours_tvTours"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/tours_head"
		    android:textAppearance="?android:attr/textAppearanceLarge" />

		<Button
		    android:id="@+id/tours_bCreateNewTour"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/tours_newTour" 
		    android:layout_gravity="right"/>
		</TableRow>
		
		<View
        	android:layout_height="2dip"
   			android:background="#FF909090" />
    
    	<View 
        	android:layout_height="15dip"
        	android:background="#000000"/>
    </TableLayout>
    
	<TableLayout 
		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
        android:id="@+id/tours_headTable">
		
		<TableRow
		    android:id="@+id/tours_trTableHead"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
			<TextView
			    android:id="@+id/tours_tvFrom"
			    android:layout_width="0dip"
			    android:layout_height="wrap_content"
			    android:text="@string/tours_fromColumnHead" 
			    android:layout_weight="1"/>
			
			<TextView
			    android:id="@+id/tours_tvTo"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/tours_toColumnHead" 
			    android:layout_weight="1"/>
			
			<TextView
			    android:id="@+id/tours_tvTime"
			    android:layout_width="0dip"
			    android:layout_height="wrap_content"
			    android:text="@string/tours_timeColumnHead" 
			    android:layout_weight="1"/>
    	</TableRow>
    </TableLayout>
</LinearLayout>

