<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <TableLayout android:id="@+id/createTourDialog_tlTable"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >
        
        <TableRow android:layout_width="fill_parent"
        	  android:layout_height="wrap_content">
    
        	<TextView android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF"
              	  android:text="@string/tourDetailsDialog_city"
              	  android:layout_weight="1" />
        
        	<Spinner android:id="@+id/createTourDialog_spCity"
            	  android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF" 
              	  android:layout_weight="1" />
    
    	</TableRow>
    
    	<TableRow android:layout_width="fill_parent"
        	  android:layout_height="wrap_content">
    
       	 	<TextView android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF"
              	  android:text="@string/tourDetailsDialog_from" 
              	  android:layout_weight="1" />
        
        	<Spinner android:id="@+id/createTourDialog_spFrom"
            	  android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF"
              	  android:layout_weight="1" />
    
    	</TableRow>
    
    	<TableRow android:layout_width="fill_parent"
        	  android:layout_height="wrap_content">
    
        	<TextView android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF"
              	  android:text="@string/tourDetailsDialog_to"
              	  android:layout_weight="1" />
        
        	<Spinner android:id="@+id/createTourDialog_spTo"
            	  android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF"
              	  android:layout_weight="1" />
    
   		</TableRow>
    
 	  	<TableRow android:layout_width="fill_parent"
        	  android:layout_height="wrap_content">
    
        	<TextView android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF"
              	  android:text="@string/createTourDialog_date"
              	  android:layout_weight="1" />
        
                 
                 <TextView android:id="@+id/createTourDialog_tvDate"
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:textColor="#FFF"
                     android:layout_weight="1"/>
        	    
    	</TableRow>
    
  		<TableRow android:layout_width="fill_parent"
        	  android:layout_height="wrap_content">
    
        	<TextView android:layout_width="0dip"
              	  android:layout_height="wrap_content"
              	  android:textColor="#FFF"
              	  android:text="@string/tourDetailsDialog_time"
              	  android:layout_weight="1" />
        
        	<LinearLayout android:layout_width="0dip"
              	 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="horizontal">
                 
                 <TextView android:id="@+id/createTourDialog_tvFromTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#FFF"/>
                 
                  <TextView 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#FFF"
                     android:text="@string/createTourDialog_timeSeperator"/>
                  
                  <TextView android:id="@+id/createTourDialog_tvToTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#FFF"/>
        	    
        	</LinearLayout>
    	</TableRow>
        
    </TableLayout>
    
    <View android:id="@+id/tourDetailsDialog_vFiller"
        android:layout_width="fill_parent"
        android:layout_height="15dip"
        android:layout_below="@id/createTourDialog_tlTable" />
    
    <Button android:id="@+id/createTourDialog_bCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tourDetailsDialog_vFiller"
        android:layout_alignParentRight="true"
        android:text="@string/createTourDialog_createbutton" />

</RelativeLayout>